--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,4 +1,6 @@
 repositories {
+    maven { url = 'https://maven.brott.dev/' }
+    maven { url 'https://jitpack.io' }
     mavenCentral()
     google() // Needed for androidx
 }
@@ -13,5 +15,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.0'
     implementation 'org.firstinspires.ftc:Vision:10.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
 }
 
